test/invalid/test03.02-explicit.asp
<% Option Explicit %>

<%

Dim DefVar

DefVar = "Hello There"

%><%=DefVar%><br>
<%

%><%=UnDefVar%><br>
<%

%>


